# as-course

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  celerybeat-schedule.db  dependencies.py  docker-compose-ci.yml  docker-compose.yml  entrypoint.sh  hotels.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
front/: index.html
src/: config.py  database.py  exceptions.py  main.py
src/api/: auth.py  bookings.py  decorators.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2025_05_31_1802-7ee8acac53cb_add_rooms.py  2025_06_05_1720-72ec27ce75fa_add_users.py  2025_06_05_1725-973919f7e903_add_name_to_users.py  2025_06_06_1607-ccb9ebab15df_users_password_to_hashed_password.py  2025_06_06_1620-3b7c73eb1747_add_users_with_unique_emails.py  2025_06_06_1740-a1654104d975_create_users.py  2025_06_10_1213-5efad6ef2a00_add_bookings.py  2025_06_10_1626-2236aa281a3a_booking_datetime_to_date.py  2025_06_24_1636-028325079833_all_in_one.py  2025_07_02_1543-9961c9a1ec80_unique_facilities.py  cad9d7ae823e_add_rooms.py  (+3 more)
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/schemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
tests/: conftest.py
(+12 files in other folders)
